--- a/app/scss/app.scss
+++ b/app/scss/app.scss
@@ -1132,8 +1132,8 @@
 								width: 50.1%;
 								height: 48.8%;
 								display: table;
-								margin: auto;
-								top: 0; bottom: 0; left: 0; right: 0;
+								top: 24.4%;
+								left: 25.05%;
 								border: 1px solid $light-gray;
 								color: $mid-gray;
 								font-weight: 700;
